<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
</resources>